temp/unpackaged/objects/Menu__c.object
<CustomObject>
    <fields>
        <fullName>Item_Name__c</fullName>
        <label>Item Name</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pizza</fullName>
                </value>
                <value>
                    <fullName>Burger</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_category__c</fullName>
        <label>Item category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VEG</fullName>
                </value>
                <value>
                    <fullName>NON-VEG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>17</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Menu</label>
    <nameField>
        <displayFormat>MN-{000}</displayFormat>
        <label>MenuID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Menus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Menu</fullName>
        <active>true</active>
        <errorConditionFormula>ISNUMBER(Item_Name__c)</errorConditionFormula>
        <errorMessage>Please Enter A Valid Item Name</errorMessage>
    </validationRules>
</CustomObject>